5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1602_842.log
== TEST (2019-03-31 18:37:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("digite o numero"))
divisao = numero//1000
print(divisao)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:39:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("digite o numero"))
a = numero//1000
b = numero//100
c = numero//10
d = numero//1
print(divisao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(divisao)
NameError: name 'divisao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:39:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("digite o numero"))
a = numero//1000
b = numero//100
c = numero//10
d = numero//1
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
9
91
917
9173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:40:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("digite o numero"))
a = numero//1000
b = (numero//100)%10
c = numero//10
d = numero//1
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
9
1
917
9173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:42:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("digite o numero"))
a = numero//1000
b = (numero//100)%10
c = (numero//10)%100
d = (numero//1)%1000
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
9
1
17
173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:43:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("digite o numero"))
a = numero//1000
b = (numero//100)%10
c = ((numero//10)%100)%10
d = (((numero//1)%1000)%10)%10
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
9
1
7
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:44:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("digite o numero"))
a = numero//1000
b = (numero//100)%10
c = ((numero//10)%100)%10
d = (((numero//1)%1000)%10)%10
print(a)
print(b)
print(c)
print(d)
soma = a+b+c+d
print(soma)
-- OUTPUT:
9
1
7
3
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:44:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("digite o numero"))
a = numero//1000
b = (numero//100)%10
c = ((numero//10)%100)%10
d = (((numero//1)%1000)%10)%10
print(a)
print(b)
print(c)
print(d)
soma = a+b+c+d
print(soma)
-- OUTPUT:
9
1
7
3
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:45:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("digite o numero"))
a = numero//1000
b = (numero//100)%10
c = ((numero//10)%100)%10
d = (((numero//1)%1000)%10)%10
soma = a+b+c+d
print(soma)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:02:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("digite o numero"))
a = numero//1000
b = (numero//100)%10
c = ((numero//10)%100)%10
d = (((numero//1)%1000)%100)%10
soma = a+b+c+d
print(soma)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 19:03:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("digite o numero"))
a = numero//1000
b = (numero//100)%10
c = ((numero//10)%100)%10
d = (((numero//1)%1000)%100)%10
soma = a+b+c+d
print(soma)
-- EXECUTION TIME:
0.122014
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
